# omd

./: .gitignore  CITATION.cff  CONCEPT.md  CONCURRENCY.md  Makefile  NOTICE  README.md  SERVER_SPEC.md  pyproject.toml
PROVENANCE/: priority-20260715.manifest  priority-20260715.manifest.ots
benchmarks/: __init__.py  omd_scheduler_m0.py  omd_scheduler_m1.py  package_scheduler_m0_judgment.py  produce_scheduler_m0_receipt.py  produce_scheduler_m1_receipt.py
docs/: ENGINE_V2.md  FEEDBACK_fragmentation_harm_20260719.md  FEEDBACK_problems_20260630.md  OMD_DEMPSEY_ROLL.md  OMD_SCHEDULER_DEVELOPMENT_HARNESS_20260715.md  OMD_SCHEDULER_REDESIGN_20260715.md  OPTION_C_ADMISSION_ENVELOPE_HEAL_FORWARD_2026-07-21.md  REPO_SAGA_V2.md  STATE_SPACE_HARNESS.md  longinus_bindings.json
gates/: bail.yaml  barrier.yaml  claim.yaml  connect.yaml  flag.yaml  scheduler_fairness.yaml  semaphore.yaml
omd_server/: __init__.py  _barriers.py  _const.py  _flags.py  _sems.py  admission.py  admission_config.py  admission_contract.py  bypass_audit.py  bypass_hook.py  candidate_index.py  cli.py  conformance.py  core.py  disjoint.py  events.py  fsm.py  gitio.py  harness.py  hot_files.py  longinus.py  merge_cli.py  ooptdd_devloop_scenario.py  ooptdd_scenarios.py  overlap_pilot.py  scheduler_admission_fsm.json  server.py  sinks.py  store.py  task_state.py
scripts/: dev123_neg_p3o3.py  dogfood_parallel_dev.py  judge_scheduler_m0.py  multiagent_parallel_session.py  omd_bypass_gate.py  omd_overlap_pilot.py  overlap_baserate.py  run_tlc.sh  run_tlc_deep.sh
spec/: connect_pipeline_engine.json  connect_pipeline_fsm.json  connect_pipeline_loop.json  connect_pipeline_traces.json  omd_admission.cfg  omd_admission.tla  omd_concurrency_ooptdd.yaml  omd_connect.cfg  omd_connect.tla  omd_devloop_ooptdd.yaml  (+10 more)
(+142 files in other folders)
