[project]
name = "omd"
version = "0.0.1"
description = "OMD — 입체운행물방울(Orbital Motion Droplet) 멀티에이전트 병렬 개발 코디네이터"
requires-python = ">=3.10"
dependencies = ["transitions>=0.9"]

[project.optional-dependencies]
server = ["fastmcp>=2.0"]
dev = ["pytest>=8"]

[project.scripts]
omd = "omd_server.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["omd_server"]
