[project]
name = "omd"
version = "0.0.1"
description = "OMD — 입체운행물방울(Orbital Motion Droplet) 멀티에이전트 병렬 개발 코디네이터"
requires-python = ">=3.10"
dependencies = ["transitions>=0.9"]

[project.optional-dependencies]
server = ["fastmcp>=2.0"]
# ooptdd(LTDD): 동사별 구조화 이벤트를 store에서 도착-검증하는 게이트. 이 워크스페이스에선
# `uv pip install -e ../ooptdd` 로 editable 설치한다(자매 레포).
dev = ["pytest>=8", "hypothesis>=6.100", "ooptdd>=0.4"]

[project.scripts]
omd = "omd_server.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

# ooptdd pytest 플러그인: OMD 단위테스트는 인프로세스 memory backend로 자체검증(결정적·고속).
# 네트워크 backend(openobserve/otlp)에 의존하지 않는다 — OMD의 LTDD 게이트 테스트는 각자
# MemoryBackend를 직접 만들어 evaluate()를 호출하므로 플러그인의 자동 ship에 의존하지 않는다.
[tool.ooptdd]
backend = "memory"
service = "omd.tests"
verify = "warn"     # 관측은 보고만(빌드 verdict를 뒤집지 않음)

[tool.setuptools]
packages = ["omd_server"]

[tool.pytest.ini_options]
# benchmarks/ · scripts/ 는 top-level 툴링 디렉터리(패키지 설치 대상 아님).
# 리포 루트를 sys.path 에 넣어 `pytest` 콘솔스크립트(cwd 미포함)와 `python -m pytest`(cwd 포함)
# 양쪽에서 tests/test_scheduler_m0_harness.py 의 `from benchmarks...`/`from scripts...` import 가
# 동작하게 한다 (M0 병합 회귀 봉합 — CI 는 `pytest` 콘솔스크립트로 실행).
pythonpath = ["."]
